--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ flask==1.0.4
 google-cloud-bigquery
 google-cloud-storage
 google-api-python-client
-pytest==5.4.1
+pytest==5.4.1\
+pandas-gbq==0.14.1
